# PositionBasedDynamics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml  macOS.yml
Course01-minimal-pbd/: CMakeLists.txt
Course01-minimal-pbd/src/: constraints.cpp  constraints.h  main.cpp
Examples/: CMakeLists.txt
Examples/ClothSim01/: main.cpp
Examples/CubeSim01/: main.cpp
Examples/RigidSim01/: main.cpp
RenderingFrameWork/: CMakeLists.txt  eigen_types.h  pbd_viewer.cpp  pbd_viewer.h
RenderingFrameWork/api/: draggable.cpp  draggable.h  renderable.cpp  renderable.h
RenderingFrameWork/src/: inspector.cpp  inspector.h  mouse_callback.cpp  mouse_callback.h  renderable.cpp  renderable.h  utils.cpp  utils.h
RenderingFrameWork/test/: main.cpp
Resources/docs/: libigl.md
Resources/models/: cube.ply
SimulationFrameWork/: CMakeLists.txt  pbd_sim.cpp  pbd_sim.h
SimulationFrameWork/src/: cloth.cpp  cloth.h  collision.cpp  collision.h  constraints.cpp  constraints.h  contact_constraints.cpp  contact_constraints.h  indexed_face_mesh.cpp  indexed_face_mesh.h  object.cpp  object.h  objects.cpp  objects.h  time_integration.cpp  time_integration.h
SimulationFrameWork/src/collisions/: aabb.h  bounding_sphere.h  bounding_sphere_hierarchy.cpp  bounding_sphere_hierarchy.h  colliders.cpp  colliders.h  collision_detection.cpp  collision_detection.h  distance_field_collision_detection.cpp  distance_field_collision_detection.h  distance_field_colllision_detection.cpp  distance_field_colllision_detection.h  kdtree.h
SimulationFrameWork/src/constraints/: constraints.cpp  constraints.h  contacts.cpp  contacts.h  joints.cpp  joints.h
SimulationFrameWork/src/objects/: deformable.cpp  deformable.h  fluid.cpp  fluid.h  objects.cpp  objects.h  rigidbody.cpp  rigidbody.h
SimulationFrameWork/src/simple_collision/: collision_objects.h
SimulationFrameWork/test/: CMakeLists.txt  main.cpp
SimulationFrameWork/test/TestCloth/: main.cpp
SimulationFrameWork/test/TestCube/: main.cpp
SimulationFrameWork/test/TestRigidBody/: main.cpp
SimulationFrameWork/test/TestStarryFish/: main.cpp
SimulationFrameWork/utils/: performance_check.h
SimulationFrameWork/utils/fields/: fields3.cpp  fields3.h  fileds2.cpp  fileds2.h
SimulationFrameWork/utils/kernels/: sph_kernel.cpp  sph_kernel.h
SimulationFrameWork/utils/neighbor_search/: point_neighbor_searcher3.h
Utils/: pbd_log.h  performace_check.h  stb_utils.h
Utils/visualization/: eigen_types.h  inspector.cpp  inspector.h  pick_nearest_vertices.cpp  pick_nearest_vertices.h  viewer.cpp  viewer.h
Utils/visualization_src/: inspector.cpp  pick_nearest_vertices.cpp  viewer.cpp  viewer.h
cmake/: FindMY_DISCREGRID.cmake  FindMY_EIGEN.cmake  FindMY_OPENCV.cmake  FindMY_OPENMP.cmake  libigl.cmake
log/: Distance Constraint.txt  M_inv.txt
